<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.appdrawer.ui.home_second.HomeSecondFragment"
        android:label="@string/menu_home_second"
        tools:layout="@layout/fragment_home_second">

        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_test1"
        android:name="com.example.appdrawer.ui.areaListView.AreaFragment"
        android:label="@string/menu_test1"
        tools:layout="@layout/fragment_area" />

    <fragment
        android:id="@+id/nav_area_recycle_view"
        android:name="com.example.appdrawer.ui.areaRecyclerView.AreaRecyclerFragment"
        android:label="@string/menu_test2"
        tools:layout="@layout/fragment_area_recycle" />

    <fragment
        android:id="@+id/nav_area_recycle_view_detail"
        android:name="com.example.appdrawer.ui.areaRecyclerView.AreaRecyclerDetailFragment"
        android:label="@string/menu_test2"
        tools:layout="@layout/fragment_area_recycler_detail" />

</navigation>